--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
-# results
-[0-9]*/
+# --- keep initial conditions ---
+!0/
+!0/**
+# --- ignore result time folders (1,2,10,100,...) ---
+[1-9]*/
+[1-9][0-9]*/
+[1-9][0-9][0-9]*/
+[1-9][0-9][0-9][0-9]*/
+# --- runtime outputs ---
 postProcessing/
 processor*/
 dynamicCode/
 log*
 *.log
 *.foam
-# mesh
-constant/polyMesh/
-*.msh
-# editor junk
+# --- editor junk ---
 *~
 *.swp
 *.swo
